--- a/trigger/package.json
+++ b/trigger/package.json
@@ -1,6 +1,12 @@
 {
+  "scripts":{
+    "dev": "npx trigger.dev@latest dev"
+  },
   "dependencies": {
-    "@trigger.dev/sdk": "^3.3.17"
+    "@libsql/client": "^0.15.9",
+    "@trigger.dev/sdk": "^3.3.17",
+    "dotenv": "^17.2.0",
+    "drizzle-orm": "^0.44.2"
   },
   "devDependencies": {
     "@trigger.dev/build": "^3.3.17"
