--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-auth": "^5.0.0-beta.29",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5",
     "swr": "^2.3.4"
   },
   "devDependencies": {
