--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@libsql/client": "^0.15.9",
+    "@mendable/firecrawl-js": "^1.29.1",
+    "@pinecone-database/pinecone": "^6.1.1",
     "@trigger.dev/sdk": "^3.3.17",
     "@useparagon/connect": "^2.0.6",
     "dotenv": "^17.2.0",
@@ -23,7 +25,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-toastify": "^11.0.5",
-    "swr": "^2.3.4"
+    "swr": "^2.3.4",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
