--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,10 @@ TURSO_DATABASE_URL=
 TURSO_AUTH_TOKEN=
 
 TRIGGER_SECRET_KEY=
+
+GEMINI_API_KEY=
+
+PINECONE_API_KEY=
+PINECONE_INDEX=
+
+FIRECRAWL_API_KEY=
