--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@libsql/client": "^0.15.9",
     "@mendable/firecrawl-js": "^1.29.1",
     "@pinecone-database/pinecone": "^6.1.1",
-    "@trigger.dev/sdk": "^3.3.17",
+    "@trigger.dev/sdk": "4.1.2",
     "@useparagon/connect": "^2.0.6",
     "dotenv": "^17.2.0",
     "drizzle-orm": "^0.44.2",
-    "next": "15.3.5",
+    "next": "16.0.6",
     "next-auth": "^5.0.0-beta.29",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -30,7 +30,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@trigger.dev/build": "^3.3.17",
+    "@trigger.dev/build": "4.1.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
